@@ -30,6 +30,7 @@ import org.dspace.core.Constants;
 import org.dspace.core.Context;
 import org.dspace.core.LogHelper;
 import org.dspace.eperson.EPerson;
+import org.dspace.event.DetailType;
 import org.dspace.event.Event;
 import org.dspace.identifier.DOI;
 import org.dspace.identifier.DOIIdentifierProvider;
@@ -171,7 +172,7 @@ public class WorkspaceItemServiceImpl implements WorkspaceItemService {
                                           + collection.getID()));
 
         context.addEvent(new Event(Event.MODIFY, Constants.ITEM, item.getID(), null,
-                itemService.getIdentifiers(context, item)));
+                DetailType.INFO, itemService.getIdentifiers(context, item)));
 
         return workspaceItem;
     }
@@ -180,8 +181,7 @@ public class WorkspaceItemServiceImpl implements WorkspaceItemService {
     public WorkspaceItem create(Context c, WorkflowItem workflowItem) throws SQLException, AuthorizeException {
         WorkspaceItem potentialDuplicate = findByItem(c, workflowItem.getItem());
         if (potentialDuplicate != null) {
-            throw new IllegalArgumentException(String.format(
-                "A workspace item referring to item %s already exists (%d)",
+            throw new IllegalArgumentException("A workspace item referring to item %s already exists (%d)".formatted(
                 workflowItem.getItem().getID(),
                 potentialDuplicate.getID()
             ));
@@ -250,7 +250,7 @@ public class WorkspaceItemServiceImpl implements WorkspaceItemService {
         Item item = workspaceItem.getItem();
         if (!authorizeService.isAdmin(context)
             && (item.getSubmitter() == null || (context.getCurrentUser() == null)
-                || (context.getCurrentUser().getID() != item.getSubmitter().getID()))) {
+                || !context.getCurrentUser().getID().equals(item.getSubmitter().getID()))) {
             // Not an admit, not the submitter
             throw new AuthorizeException("Must be an administrator or the "
                                              + "original submitter to delete a workspace item");
